# pawpularity-contest-dtc

./: .env.dev  .gitignore  Makefile  README.md  conda.yaml  docker-compose.yaml  notebook_manual.ipynb  notebook_mlflow.ipynb  pyproject.toml  ruff.toml  test.ipynb
deployment/orchestration/: preprocess.py
docker/: .env.dev  compose.yaml
docker/init/mlflow/: basic_auth.ini
docker/init/postgres/: lakefs.sql  pawpaw.sql
model/: history.json  model.txt
notebooks/: notebook_manual.ipynb  notebook_nannyml.ipynb
notes/: Airflow.md  Cycle.md  Docker.md  Eval.md  Fabric.md  JuiceFS.md  Kubernetes.md  LakeFS.md  MLFlow.md  Pathlib.md  S3.md
src/: _dvc.py  _field.py  _helper.py  _model.py  _typing.py  evaluation.py  monitor.py  predict.py  prediction.py  preprocess.py  serving.py  training.py  webapp.py
src/_dashboard/: report.py
src/_ml/: model.py  server.py  tester.py  trainer.py  utils.py
src/_monitoring/: reporter.py
src/_pydantic/: common.py  evidently.py  report.py  serve.py  shared.py  train_test.py
src/_s3/: common.py  lakefs.py  utils.py
src/pawpaw/: __init__.py  evaluation.py  preprocess.py  serving.py  training.py  webapp.py
src/pawpaw/ml/: model.py  server.py  tester.py  trainer.py  utils.py
src/pawpaw/monitoring/: reporter.py
src/pawpaw/pydantic/: common.py  report.py  serve.py  train_test.py
src/pawpaw/pydantic_/: common.py  report.py  serve.py  train_test.py
src/pawpaw/s3/: common.py  lakefs.py
tests/: conftest.py  model_env_test.py  model_meta_test.py  params_test.py
